[package]
name = "lorust"
authors = ["Imamuzzaki Abu Salam <imamuzzaki@gmail.com>"]
description = "Modern Rust utility library delivering modularity, performance & extras; or simply Rust version of Lodash"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lorust"
homepage = "https://github.com/ImBIOS/lorust"
repository = "https://github.com/ImBIOS/lorust"
include = ["Cargo.toml", "src/**/*"]
keywords = ["utility", "library", "lodash", "performance", "extras"]
categories = [
  "development-tools",
  "rust-patterns",
  "algorithms",
  "web-programming",
  "mathematics",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["math", "object", "string"]
math = []
object = ["serde_json"]
string = ["unicode-normalization", "regex"]

[dependencies.unicode-normalization]
version = "0.1.17"
optional = true

[dependencies.regex]
version = "1.5.4"
optional = true

[dependencies.serde_json]
version = "1.0.66"
optional = true
