[package]
name = "lorust"
authors = ["Imamuzzaki Abu Salam <imamuzzaki@gmail.com>"]
description = "Modern Rust utility library delivering modularity, performance & extras; or simply Rust version of Lodash"
version = "0.2.0"
rust-version = "1.70"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lorust"
homepage = "https://github.com/ImBIOS/lorust"
repository = "https://github.com/ImBIOS/lorust"
include = ["Cargo.toml", "src/**/*"]
keywords = ["utility", "library", "lodash", "performance", "extras"]
categories = [
  "development-tools",
  "rust-patterns",
  "algorithms",
  "web-programming",
  "mathematics",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["function", "lang", "math", "object", "string"]

function = ["debounce"]
debounce = ["log"]

lang = ["is_number"]
is_number = []

math = ["round"]
round = []

object = ["get", "map_values", "merge", "pick", "set"]
get = []
map_values = []
merge = ["serde_json"]
pick = []
set = []

string = ["capitalize", "deburr", "ends_with", "kebab_case", "words"]
capitalize = []
deburr = ["unicode-normalization"]
ends_with = []
kebab_case = []
words = ["regex"]

[dependencies]
serde_json = { version = "1.0.100", optional = true }
regex = { version = "1.9.1", optional = true }
unicode-normalization = { version = "0.1.22", optional = true }
log = { version = "0.4.19", optional = true }
